--- a/app/html/components/_head.html
+++ b/app/html/components/_head.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio MB</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Студия “High pass”</title>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=76d10f3a-6594-4483-8620-1091358b4d14&lang=ru_RU"></script>
 
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=76d10f3a-6594-4483-8620-1091358b4d14&lang=ru_RU"></script>
+    <script src="js/just-validate.min.js" defer></script>
+    <script src="js/inputmask.min.js" defer></script>
+    <script src="js/main.min.js " defer></script>
 
-  <script src="js/just-validate.min.js" defer></script>
-  <script src="js/inputmask.min.js" defer></script>
-  <script src="js/main.min.js " defer></script>
-
-
-
-
-  <link rel="stylesheet" href="css/style.css" />
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+</html>
