--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -14,8 +14,8 @@ html {
 }
 
 body {
-  font-family: "roboto", sans-serif;
-  font-weight: 400;
+  font-family: "DMSans", sans-serif;
+  font-weight: 800;
   font-size: 16px;
   font-style: normal;
   min-height: 320px;
@@ -54,6 +54,6 @@ img {
 .container {
   margin: 0 auto;
   padding: 0 15px;
-  max-width: 1320px;
+  max-width: 1200px;
   width: 100%;
 }
